# q2api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  auth_flow.py  claude_converter.py  claude_parser.py  claude_stream.py  claude_types.py  compose.yaml  db.py  docker-compose.yml  replicate.py  requirements.txt  test_models.py  test_proxy.py  test_via_api.py  tokenizer.py
.claude/: settings.local.json
.github/workflows/: docker-build.yml
account-feeder/: .env.example  README.md  app.py  docker-compose.yml
docs/: SUMMARY_CN.md
frontend/: index.html  login.html
rust/q2api-core/: Cargo.toml  pyproject.toml
rust/q2api-core/src/: decoder.rs  error.rs  lib.rs  python.rs  sse.rs
scripts/: account_stats.py  delete_disabled_zero_success_accounts.py  manage_suspended_accounts.py  migrate_database.py  migrate_db.py  reset_accounts.py  retry_failed_accounts.py
templates/: streaming_request.json
