[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "q2api-core"
version = "0.1.0"
description = "High-performance AWS Event Stream parser with CRC32C validation"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
